Fix brocken code

--- a/tasks/configure-plugins.yml
+++ b/tasks/configure-plugins.yml
@@ -13,7 +13,7 @@
     - microk8s_plugin.key != "dns"
   register: microk8s_cmd_result
   changed_when:
-    - "'Addon {{ microk8s_plugin.key }} is already enabled'
+    - "'Addon ' + microk8s_plugin.key + 'is already enabled'
       not in microk8s_cmd_result.stdout"
   tags:
     - molecule-idempotence-notest
@@ -30,7 +30,7 @@
     label: "{{ microk8s_plugin.key }}"
   register: microk8s_cmd_result
   changed_when:
-    - "'Addon {{ microk8s_plugin.key }} is already disabled'
+    - "'Addon ' + microk8s_plugin.key +' is already disabled'
       not in microk8s_cmd_result.stdout"
   when:
     - microk8s_plugins is defined
