--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -2,6 +2,8 @@
 - name: Converge
   hosts: all
   become: true
+  vars:
+    microk8s_users: ['vagrant']
   roles:
     - role: racqspace.microk8s
 ...
